# rust_backend

./: Cargo.toml
src/: db.rs  error.rs  main.rs  models.rs
src/db/: database.rs  pizza_data_trait.rs
src/error/: pizza_error.rs
src/models/: pizza.rs
